--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,6 +1,6 @@
 [bumpversion]
-files = VERSION .bumpversion.cfg README.rst
-commit = True
+files = VERSION .bumpversion.cfg README.rst provision/docker-compose/dev.yml provision/docker-compose/test.yml
+commit = False
 tag = False
 current_version = 0.1.0
 
