--- a/.tmuxinator.yml
+++ b/.tmuxinator.yml
@@ -1,17 +1,31 @@
 # ~/.tmuxinator/slides-aws-overview.yml
 name: slides-aws-overview
 root: <%= ENV["PROJECTS"] %>/slides/slides-aws-overview
-tmux_options: -2
 # Optional tmux socket
 # socket_name: foo
 
-# Runs before everything. Use it to start daemons etc.
-# pre: sudo /etc/rc.d/mysqld start
-pre:
-    - make environment
+# Note that the pre and post options have been deprecated and will be replaced by
+# project hooks.
+
+# Project hooks
+
+# Runs on project start, always
+on_project_start: make environment
+
+# Run on project start, the first time
+# on_project_first_start: command
+
+# Run on project start, after the first time
+# on_project_restart: command
+
+# Run on project exit ( detaching from tmux session )
+on_project_exit: make docker.down
+
+# Run on project stop
+on_project_stop: make docker.down
 
 # Runs in each window and pane before window/pane specific commands. Useful for setting up interpreter versions.
-# pre_window: rbenv shell 2.0.0-p247
+pre_window: pyenv activate slides-aws-overview
 
 # Pass command line options to tmux. Useful for specifying a different tmux.conf.
 # tmux_options: -f ~/.tmux.mac.conf
@@ -20,40 +34,31 @@ pre:
 # tmux_command: byobu
 
 # Specifies (by name or index) which window will be selected on project startup. If not set, the first window is used.
-# startup_window: logs
-
-# Controls whether the tmux session should be attached to automatically. Defaults to true.
-# attach: false
-
-# Runs after everything. Use it to attach to tmux with custom options etc.
-# post: tmux -CC attach -t slides-aws-overview
+startup_window: docker
 
 windows:
   - editor:
       layout: even-horizontal
       panes:
         - editor:
-            - pyenv activate slides-aws-overview
         - pwd:
-            - pyenv activate slides-aws-overview
         - pwd:
-            - pyenv activate slides-aws-overview
   - python:
       layout: main-vertical
       panes:
-        - python:
-            - pyenv activate slides-aws-overview
+        - ipython:
   - databases:
       layout: main-vertical
       panes:
+        - postgresql:
         - ls:
-            - pyenv activate slides-aws-overview
-        - ls:
-            - pyenv activate slides-aws-overview
+  - aws:
+      layout: main-vertical
+      panes:
+        - webserver:
+        - databases:
   - docker:
       layout: main-vertical
       panes:
-        - ls:
-            - pyenv activate slides-aws-overview
-        - ls:
-            - pyenv activate slides-aws-overview
+        - webserver:
+        - databases:
