--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,20 @@
-# slides-aws-overview: Docker Compose
+# Docker Compose
 # https://docs.docker.com/compose/
-#
 # Usage: docker-compose up
-version: '3'
+---
+version: "3"
 services:
+  # Python
   app:
-    restart: always
-    image: python:3.6.1
     build:
       context: .
       dockerfile: provision/docker/app/Dockerfile
     volumes:
-      - .:/usr/src/
+      - .:/usr/src
     env_file:
       - .env
 
   docs:
-    restart: always
-    image: labpositiva/latex:3.6.1
     build:
       context: .
       dockerfile: provision/docker/docs/Dockerfile
