--- a/provision/docker/docs/Dockerfile
+++ b/provision/docker/docs/Dockerfile
@@ -1,8 +1,12 @@
 FROM labpositiva/latex:3.6.1
+
 MAINTAINER Luis Mayta <@slovacus>
 
-LABEL NAME latex
-LABEL VERSION 3.6.1
+ARG stage
+ARG version
+
+LABEL NAME slide-doc
+LABEL VERSION $version
 
 COPY ./requirements/ /usr/src/requirements/
 COPY ./requirements.txt /usr/src/requirements.txt
