--- a/package.json
+++ b/package.json
@@ -2,24 +2,29 @@
   "name": "slides-aws-overview",
   "version": "0.0.0",
   "scripts": {
+    "help": "mdx-deck",
     "eslint": "eslint .",
     "eslint:fix": "eslint --fix .",
     "start": "mdx-deck slides.mdx",
-    "build": "mdx-deck build slides.mdx --no-html",
-    "now-build": "mdx-deck build slides.mdx --no-html && cp -r images dist/"
+    "build": "mdx-deck build slides.mdx",
+    "gh-pages": "git subtree push --prefix public upstream gh-pages",
+    "gh-pages:force": "git push upstream `git subtree split --prefix public master`:gh-pages --force",
+    "gh-pages:refresh": "git push upstream :gh-pages && git subtree push --prefix public upstream gh-pages",
+    "deploy": "npm run build && cd public && npx now"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-eslint-plugin": "^2.2.0",
-    "prettier": "^1.19.1",
-    "styled-components": "^4.4.1"
+    "gh-pages": "^2.2.0",
+    "prettier": "^1.19.1"
   },
   "dependencies": {
+    "@ant-design/colors": "^3.2.2",
     "@mdx-deck/components": "^2.5.0",
     "@mdx-deck/themes": "^3.0.8",
+    "antd": "^3.26.6",
     "mdx-deck": "^3.0.13",
-    "react": "^16.12.0",
-    "rebass": "^4.0.7"
+    "react": "^16.12.0"
   }
 }
