--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,36 @@
----
-language: python
-python: '3.8'
+language: node_js
+node_js: stable
+
+# branches:
+#   only:
+#     - master
+
+env:
+  global:
+    - GH_REF: github.com/equipindustry/slides-aws-overview.git
+    - GH_BRANCH: gh-pages
+    - USER_NAME: '@slovacus'
+    - USER_EMAIL: 'slovacus@gmail.com'
+
+cache:
+  directories:
+    - $HOME/.yarn
+
+before_install:
+  - node --version
+  - yarn --version
+
+install:
+  - yarn install
+
+script:
+  - yarn build
+
+after_script:
+  - cd ./public
+  - git init
+  - git config user.name "${USER_NAME}"
+  - git config user.email "${USER_EMAIL}"
+  - git add .
+  - git commit -m "chore: Implement build for branch gh-pages"
+  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" develop:${GH_BRANCH}
